<resources>
    <string name="app_name">Recipe Roulette</string>
    <string name="default_web_client_id">217153905955-spv5u408mc29flpg3bgqqev5272k2cd3.apps.googleusercontent.com</string>
    <string name="signin_title">Sign in to use app.</string>

    <!--    Menu buttons-->
    <string name="recipe_engine">Recipe Engine</string>
    <string name="take_photo">Add to Pantry</string>
    <string name="flavor_profile">Flavor Profile</string>
    <string name="req_ingredient">Request Ingredient</string>
    <string name="cook_together">Cook with others</string>
    <string name="recipe_review">Recipe Reviews</string>
    <string name="grocery_upload">Upload Groceries</string>
    <string name="signout">Sign out</string>

    <string name="read_more">Read more</string>
    <string name="write_rev">Write your own review</string>
    <string name="title">Title</string>
    <string name="submit_review">Submit Review</string>

    <string name="Loremipsum">Lorem Ipsum</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="like_info">Rating count is only updated upon refreshing the recipes activity.
    Please go to the main menu, and then reopen this review to see the count increase. </string>

    <string name="shared_pref_filename">com.beaker.reciperoulette.TOKEN</string>


    <string name="req_ingred">Request Ingredients</string>
    <string name="donate_ingred">Donate Ingredients</string>
    <string name="donate">Donate</string>
    <string name="contact">Contact Details</string>
    <string name="ingredient">Ingredient</string>
    <string name="view_prev_req">View outstanding requests</string>

    <string name="your_requests">Your Requests</string>
    <string name="must_enter_contact">You must enter the ingredient and your contact details.</string>

    <string name="go_out_with_others">Go out with others</string>
    <string name="lonely">Don\'t see any entries? This feature is called cook with others, not cook with yourself.
    Tell your friends to hit the \"Cook with others\" button on their (another) phones.</string>

    <string name="name">Name</string>
    <string name="details">Details</string>
    <string name="contact_details">Contact Details</string>
    <string name="go_cook">Go cooking</string>
    <string name="go_shop">Go shopping</string>

    <string name="your_flavor_profile_is">Your flavor profile is:</string>
    <string name="capture_image">Capture Photo of Groceries</string>
    <string name="select_photo_from_camera_roll">Select Photo of Groceries from Camera Roll</string>
    <string name="send_image">Send Groceries</string>
    <string name="manual_enter">Manually Input Grocery Item</string>
    <string name="recipe_name_filler">RECIPE NAME</string>
    <string name="recipe_summary_filler">RECIPE SUMMARY\n</string>
    <string name="ingredients_name_filler">INGREDIENTS\n- Ingredient 1\n- Ingredient 2\n- Ingredient 3</string>
    <string name="recipe_steps_filler">STEPS\n- Step 1\n- Step 2\n- Step 3</string>
    <string name="recipe_complete">Recipe Complete!</string>
    <string name="grocery_items_image_description">Image of Grocery Items</string>
    <string name="generate_recipes">Generate Recipes</string>
    <string name="scrollable_recipe">Scrollable Recipe</string>

    <string name="inventory">Inventory</string>
    <string name="consume">Consume</string>
    <string name="inv_new">New!</string>
    <string name="inv_expires">Expiry: </string>

    <string name="cannot_donate">Unable to donate, please try again later!</string>
    <string name="msg_token_expired">Exit the app and try again</string>

    <string name="cannot_req">Unable to request, please try again later</string>

    <string name="rq_msg_req_successful">Request successful!</string>

    <string name="rev_msg_no_title">No title</string>

<!--Constants-->

    <!-- Chatroom type related constants   -->
    <string name="cht_type_shopreq">SHOPREQ</string>
    <string name="cht_type_cookreq">COOKREQ</string>
    <string name="cht_type_newshopreq">NEWSHOPREQ</string>
    <string name="cht_type_newcookreq">NEWCOOKREQ</string>
    <string name="cht_type_del">DEL</string>
    <string name="cht_contact_head">Contact: </string>

    <string name="cht_anon">Anonymous</string>

    <!-- Constants for keys in information transferred
    from EnterChatRoomView to ChatRoomLiveView -->
    <string name="cht_req_type">COOK</string>
    <string name="cht_req_name">NAME</string>
    <string name="cht_req_det">DETAILS</string>
    <string name="cht_req_cont">CONTACT</string>


    <!-- Prefix for rating -->
    <string name="rev_rating_pref">Rating: </string>

    <!--    Messages for main-->
    <string name="main_msg_no_perm_title">No notifications allowed</string>
    <string name="main_msg_no_perm_body">Since you did not allow notifications,
        you will not get information on ingredient sharing.</string>

    <string name="main_msg_allow_perm">Allow notification permissions</string>
    <string name="main_msg_allow_perm_det">You must allow the permissions in order to get real time
        notifications on ingredient sharing</string>
    <string name="main_msg_perm_OK">OK</string>
    <string name="main_msg_perm_REJ">Reject Notifications</string>

    <!--  sign in messages-->
    <string name="main_msg_decl_signin">You declined to sign in. You have to wait </string>
    <string name="main_msg_decl_signin2"> minutes</string>
    <string name="main_msg_signin_android">You must be logged into a google account on android first</string>

    <!--Review writing messages-->
    <string name="rev_cust_empty">You must enter a title and a review</string>
    <string name="revc_msg_submit_fail">Unable to submit review, please try again later.</string>


<!--    Constants for keys transferred from up-->
    <string name="inv_fromupload">FROMUPLOAD</string>

<!--    Constants for keys transferred from review to detailed-->
    <string name="rev_fromrev">REVIEW</string>

<!--    Constants for keys transferred from menu-->
    <string name="menu_signout">SIGNOUT</string>

    <!--    Server Details-->
    <string name="server_wss_url">wss://cpen321-reciperoulette.westus.cloudapp.azure.com</string>

    <!--Shared Preferences-->
    <string name="prf_token">TOKEN</string>
    <string name="prf_eml">EMAIL</string>
    <string name="prf_fcmtoken">FCMTOKEN</string>
    <string name="prf_signin_time">SIGNINTIME</string>

    <string name="prf_token_def">NOTOKEN</string>
    <string name="prf_eml_def">NOEMAIL</string>

    <!--    HTTP Requests JSON type-->
    <string name="http_json_type">application/json; charset=utf-8</string>

    <!-- HTTP URLs   -->
    <string name="http_inred_req_url">https://cpen321-reciperoulette.westus.cloudapp.azure.com/ingredientrequests</string>
    <string name="http_ingred_req_new_url">https://cpen321-reciperoulette.westus.cloudapp.azure.com/ingredientrequests/new</string>
    <string name="http_inv_update_url">https://cpen321-reciperoulette.westus.cloudapp.azure.com/foodInventoryManager/update</string>
    <string name="http_inv_url">https://cpen321-reciperoulette.westus.cloudapp.azure.com/foodInventoryManager</string>
    <string name="http_rev_like_url">https://cpen321-reciperoulette.westus.cloudapp.azure.com/reviews/like</string>
    <string name="http_flavor_profile_url">https://cpen321-reciperoulette.westus.cloudapp.azure.com/flavourprofile</string>
    <string name="http_custom_rev_url">https://cpen321-reciperoulette.westus.cloudapp.azure.com/reviews/custom</string>


    <!--    HTTP Arguments-->
    <string name="http_args_userToken">userToken</string>
    <string name="http_args_email">email</string>
    <!-- Alias for email, because server can't write consistent code-->
    <string name="http_args_userid">userID</string>
    <string name="http_args_requestItem">requestItem</string>
    <string name="http_args_phoneno">phoneNo</string>
    <string name="http_args_fcmtok">fcmTok</string>
    <string name="http_args_like">like</string>
    <string name="http_args_id">id</string>

    <!--    Date Format from server-->
    <string name="sdf_server">yyyy-MM-dd\'T\'HH:mm:ss.SSSX</string>
    <string name="sdf_readable">yyyy-MM-dd EEE</string>

    <!-- Firebase constants-->
    <string name="fcm_msg_ok">Token obtained and saved</string>
    <string name="fcm_msg_title">title</string>
    <string name="fcm_msg_text">text</string>

    <!--    Notification constants-->
    <string name="not_ch">FCM_NOTIF</string>
    <string name="not_ch_desc">For fcm notifications</string>

</resources>