<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/gen_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_recipes"
        android:layout_gravity="center"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/scrollable_recipe">

        <LinearLayout
            android:id="@+id/recipeButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
        </LinearLayout>
    </ScrollView>
</LinearLayout>
